worked on the markup

--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Happy New Year</title>
 </head>
 <body>
-    
+    <div class="container section1">
+        <div class="header">
+            <h1>Happy New Year</h1>
+        </div>
+        <div class="menu">
+            <ul class="menu-items">
+                <li class="menu-list active"><a href="#" data-to="section1">Home</a></li>
+                <li class="menu-list"><a href="#" data-to="section2">Works</a></li>
+                <li class="menu-list"><a href="#" data-to="section3">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="container section1">
+        <p>Landing Page</p>
+    </div>
+    <div class="container section2">
+        <p>Works</p>
+    </div>
+    <div class="container section3">
+        <p>Contact</p>
+    </div>
+
 </body>
 </html>
