added some basic styles

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Happy New Year</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="container section1">
@@ -20,9 +23,7 @@
         </div>
     </div>
 
-    <div class="container section1">
-        <p>Landing Page</p>
-    </div>
+    
     <div class="container section2">
         <p>Works</p>
     </div>
@@ -30,5 +31,6 @@
         <p>Contact</p>
     </div>
 
+    <script src="scripts.js"></script>
 </body>
 </html>
