added some styles and markup

--- a/Hide Menu/index.html
+++ b/Hide Menu/index.html
@@ -18,5 +18,35 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </div>
+    <section class="sec1"></section> 
+    <section class="sec2">
+        <h1>Show header on scroll Up, Hide on scroll Down</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate sed voluptates vero similique tempore? Provident, esse cupiditate debitis quo sed laudantium explicabo quam necessitatibus iste, obcaecati dolorum qui vel accusantium.
+        Tempore placeat tenetur, optio voluptas dignissimos minus sint facere magni quo esse accusantium commodi libero quos assumenda dolorem, nam sed laudantium quis vero vel. A natus dolor sint sed quo.
+        Libero, veniam doloremque. Eius, harum. Saepe minima itaque deserunt quam vitae beatae consequatur mollitia dignissimos ipsa voluptate ab illo rem possimus eius laborum, quis commodi laboriosam ullam. Dolores, corporis repudiandae.
+        Nulla fugiat omnis voluptates architecto! Laboriosam, maxime adipisci non nihil magni repellendus asperiores saepe quos esse rem sit consequuntur laudantium fuga et obcaecati eligendi corrupti minus eius aliquam? Sint, dolorem!
+        Velit adipisci quidem consectetur fugiat amet maxime hic, minima mollitia. Placeat amet quo minima impedit ipsa officia reprehenderit nihil repellendus atque mollitia quis quibusdam vitae, nam repudiandae numquam, dolor sequi?
+        Nam quas delectus ut eius vel necessitatibus doloremque illo saepe reprehenderit, nihil sed tenetur labore quam at nostrum suscipit earum quasi consequatur placeat, voluptates amet. Temporibus ex nemo harum eos.
+        Voluptatem esse at impedit molestiae dolorum cupiditate temporibus accusamus odit aperiam itaque aut, quisquam quae nisi nesciunt quam deleniti! Fuga rerum sunt illo enim accusamus exercitationem, sapiente natus! Enim, illo?
+        Explicabo sunt adipisci mollitia ipsum quasi minus. Tempora blanditiis aliquam beatae excepturi, ut libero assumenda doloremque commodi repellendus, tempore consectetur placeat quibusdam! Porro ullam minima neque, omnis laudantium totam nesciunt!
+        Est, beatae quo iusto id eveniet pariatur at accusamus corrupti fugiat! Dolorem minima dolorum, quae molestias ut placeat magni id tenetur! Accusantium dolores, nemo provident consectetur mollitia ab necessitatibus ducimus.
+        Rem minima, voluptatibus nobis tenetur recusandae maxime quidem nisi itaque illum dolorum inventore vitae vero culpa odit nihil earum soluta in sed, eum facere ut nulla possimus ipsam quia. Perspiciatis.
+        </p>
+    </section>
+    <section class="sec3"></section>
+    <section class="sec4">
+        <h1>Show header on scroll Up, Hide on scroll Down</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate sed voluptates vero similique tempore? Provident, esse cupiditate debitis quo sed laudantium explicabo quam necessitatibus iste, obcaecati dolorum qui vel accusantium.
+        Tempore placeat tenetur, optio voluptas dignissimos minus sint facere magni quo esse accusantium commodi libero quos assumenda dolorem, nam sed laudantium quis vero vel. A natus dolor sint sed quo.
+        Libero, veniam doloremque. Eius, harum. Saepe minima itaque deserunt quam vitae beatae consequatur mollitia dignissimos ipsa voluptate ab illo rem possimus eius laborum, quis commodi laboriosam ullam. Dolores, corporis repudiandae.
+        Nulla fugiat omnis voluptates architecto! Laboriosam, maxime adipisci non nihil magni repellendus asperiores saepe quos esse rem sit consequuntur laudantium fuga et obcaecati eligendi corrupti minus eius aliquam? Sint, dolorem!
+        Velit adipisci quidem consectetur fugiat amet maxime hic, minima mollitia. Placeat amet quo minima impedit ipsa officia reprehenderit nihil repellendus atque mollitia quis quibusdam vitae, nam repudiandae numquam, dolor sequi?
+        Nam quas delectus ut eius vel necessitatibus doloremque illo saepe reprehenderit, nihil sed tenetur labore quam at nostrum suscipit earum quasi consequatur placeat, voluptates amet. Temporibus ex nemo harum eos.
+        Voluptatem esse at impedit molestiae dolorum cupiditate temporibus accusamus odit aperiam itaque aut, quisquam quae nisi nesciunt quam deleniti! Fuga rerum sunt illo enim accusamus exercitationem, sapiente natus! Enim, illo?
+        Explicabo sunt adipisci mollitia ipsum quasi minus. Tempora blanditiis aliquam beatae excepturi, ut libero assumenda doloremque commodi repellendus, tempore consectetur placeat quibusdam! Porro ullam minima neque, omnis laudantium totam nesciunt!
+        Est, beatae quo iusto id eveniet pariatur at accusamus corrupti fugiat! Dolorem minima dolorum, quae molestias ut placeat magni id tenetur! Accusantium dolores, nemo provident consectetur mollitia ab necessitatibus ducimus.
+        Rem minima, voluptatibus nobis tenetur recusandae maxime quidem nisi itaque illum dolorum inventore vitae vero culpa odit nihil earum soluta in sed, eum facere ut nulla possimus ipsam quia. Perspiciatis.
+        </p>
+    </section>
 </body>
 </html>
